--- a/css/calculator.css
+++ b/css/calculator.css
@@ -23,7 +23,7 @@
 }
 
 .col4{
-    background-color: #f5923d;
+    background-color: #bba14f;
     border: 0.5px solid lightgray;
     color: white;
     font-size: 20px;
