--- a/css/calculator.css
+++ b/css/calculator.css
@@ -23,15 +23,11 @@
 }
 
 .col4{
-    background-color: #bba14f;
+    background-color: #f5923d;
     border: 0.5px solid lightgray;
     color: white;
     font-size: 20px;
     font-weight: 500;
     height: 35px;
-}
-
-input:checked ~ box{
-    display: none;
 }
 
